tests/regression/errors/basic/type_error_20.csd
// Type error test 20
sus number drip = 20
sus text tea = "string_20"
sus wrong drip = text  // Type mismatch
vibez.spill("Type error 20:", wrong)
